Updated app to use authentication

--- a/flask_api/mysql_config.yml
+++ b/flask_api/mysql_config.yml
@@ -1,4 +1,11 @@
-host: 'localhost'
-user: 'root'
-password: ''
-database: 'employee'
+dev:
+  host: 'localhost'
+  user: 'root'
+  password: ''
+  database: 'employee'
+
+test:
+  host: 'localhost'
+  user: 'root'
+  password: ''
+  database: 'employee_test'
